# pds

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  bench.sh  build.sh  deny.toml  directives.md  flake.nix  risk_based_testing.md  rust-toolchain.toml  test.sh
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml
benches/: champ.rs  compare.rs  hashmap.rs  hashset.rs  memory.rs  ordmap.rs  ordmap_tuning.sh  ordset.rs  tiered.rs  trie.rs  vector.rs
docs/: architecture.md  baselines.md  cross-variant-traits.md  decisions.md  glossary.md  impl-plan.md  pds-folio-spec.md  pds-merkle-spine-spec.md  perf-tuning-plan.md  references.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hashmap.rs  hashset.rs  ordmap.rs  ordset.rs  vector.rs
pds-durable/: Cargo.toml
pds-durable/benches/: bench.rs
pds-durable/docs/: baselines.md  impl-plan.md
pds-durable/src/: checkpoint.rs  durable_map.rs  durable_ordmap.rs  durable_set.rs  error.rs  lib.rs  policy.rs  recovery.rs  tiered_map.rs  wal.rs
pds-durable/tests/: durable_map.rs  pipelined.rs
pds-folio/: Cargo.toml
pds-folio/benches/: bench.rs  compare.rs
pds-folio/docs/: baselines.md  impl-plan.md
pds-folio/src/: btree.rs  codec.rs  folio_ordmap.rs  folio_ordset.rs  folio_vector.rs  hamt.rs  hamt_index.rs  lib.rs  node.rs  rope.rs  set.rs  text_map.rs  traits.rs  vector.rs
pds-folio/tests/: hamt_integration.rs  ordmap_vector_integration.rs
pds-merkle-spine/: Cargo.toml
pds-merkle-spine/benches/: bench.rs
pds-merkle-spine/docs/: baselines.md  impl-plan.md
pds-merkle-spine/src/: lib.rs  versioned_hamt.rs
pds-merkle-spine/tests/: versioned_hamt_integration.proptest-regressions  versioned_hamt_integration.rs
proptest-regressions/hash/: map.txt
proptest-regressions/tests/: hashset.txt
src/: arbitrary.rs  atom.rs  bag.rs  bimap.rs  bincode.rs  champ.rs  config.rs  hash_multimap.rs  hash_width.rs  identity_hasher.rs  insertion_order_map.rs  insertion_order_set.rs  intern.rs  iter.rs  lib.rs  merkle_wrapper.rs  multi_key_map.rs  ord_bag.rs  ord_bimap.rs  ord_insertion_order_map.rs  ord_insertion_order_set.rs  ord_multimap.rs  ord_symmap.rs  ord_trie.rs  pbag.rs  persist.rs  proptest.rs  quickcheck.rs  rayon.rs  ser.rs  shared_ptr.rs  sort.rs  symmap.rs  sync.rs  test.rs  traits.rs  trie.rs  unique_vector.rs  util.rs
src/hash/: map.rs  rayon.rs  set.rs
src/nodes/: btree.rs  hamt.rs  rrb.rs
src/ord/: map.rs  mod.rs  rayon.rs  set.rs
src/tests/: hashset.rs  ordset.rs  vector.rs
src/tiered/: backend.rs  backends.rs  bag.rs  bag_backend.rs  bag_backends.rs  bimap.rs  bimap_backend.rs  bimap_backends.rs  insertion_order.rs  insertion_order_backend.rs  insertion_order_backends.rs  mod.rs  multimap.rs  multimap_backend.rs  multimap_backends.rs  policy.rs  sequence.rs  sequence_backend.rs  sequence_backends.rs  set.rs  set_backend.rs  set_backends.rs  symmap.rs  symmap_backend.rs  symmap_backends.rs  tests.rs  tests_bag.rs  tests_bimap.rs  tests_compose.rs  tests_insertion_order.rs  tests_multimap.rs  tests_ord.rs  tests_seq.rs  tests_set.rs  tests_symmap.rs  tests_trie.rs  tests_unique_vec.rs  trie.rs  trie_backend.rs  trie_backends.rs  (+3 more)
src/vector/: focus.rs  mod.rs  rayon.rs
