[package]
name = "pds"
version = "1.0.0"
authors = [
    "Bodil Stokke <bodil@bodil.org>",
    "Joe Neeman <joeneeman@gmail.com>",
    "Arthur Silva <arthurprs@gmail.com>",
]
edition = "2021"
license = "MPL-2.0+"
rust-version = "1.85"
description = "Persistent data structures with structural sharing for Rust"
repository = "https://github.com/optevo/pds"
documentation = "https://docs.rs/pds"
homepage = "https://github.com/optevo/pds"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["immutable", "persistent", "hamt", "b-tree", "rrb-tree"]
exclude = [
    "dist/**",
    "rc/**",
    "release.toml",
    "Makefile.toml",
    "proptest-regressions/**",
]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "./src/lib.rs"

[features]
default = ["std", "triomphe", "ord-hash"]
std = ["wide/std", "bitmaps/std", "imbl-sized-chunks/std"]
debug = []
serde = ["dep:serde_core"]
small-chunks = []
triomphe = ["archery/triomphe"]
atom = ["dep:arc-swap", "std"]
foldhash = ["dep:foldhash"]
hash-intern = ["std"]
persist = ["std", "dep:serde_core", "hash-intern"]
# Content hash cache on OrdMap/OrdSet: O(1) PartialEq fast-path negative check;
# costs one atomic store per mutation. Default-on per DEC-036: overhead is
# unmeasurable at str-key sizes and ≤~5% at small i64 workloads, asymptoting
# to zero as map size grows. See DEC-036.
ord-hash = ["std"]

[dependencies]
bitmaps = { version = "3", default-features = false }
imbl-sized-chunks = { version = "0.1.3", default-features = false }
rand_core = { version = "0.9", default-features = false }
rand_xoshiro = "0.7"
archery = "1.2.1"
quickcheck = { version = "1.0", optional = true }
proptest = { version = "1.0", optional = true }
serde_core = { version = "1.0.224", optional = true }
rayon = { version = "1", optional = true }
arbitrary = { version = "1.0", optional = true }
wide = { version = "0.7", default-features = false }
equivalent = "1.0.2"
arc-swap = { version = "1.9", optional = true }
foldhash = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
arc-swap = "1.9"
proptest = "1.0"
serde_core = "1"
serde_json = "1"
rayon = "1"
rand = { version = "0.9", features = ["small_rng"] }
pretty_assertions = "1.0"
metrohash = "1"
proptest-derive = "0.6"
static_assertions = "1.1.0"
criterion = "0.7"
rpds = { version = "1.1.0" }
half = "2.6"
dhat = "0.3"

# --- Profiles ---

[profile.dev]
# Split debuginfo into separate files — dramatically faster incremental
# linking on macOS (avoids re-merging a monolithic dSYM on every build).
split-debuginfo = "unpacked"

[profile.release]
# Thin LTO: good code quality with reasonable link times.
lto = "thin"
# Fewer codegen units = better optimisation at the cost of compile time.
codegen-units = 16

[profile.bench]
# Inherit release optimisations (opt-level=3, lto, codegen-units).
# Add debug symbols so profiling tools (Instruments, samply) can resolve frames.
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[[bench]]
name = "ordmap"
harness = false

[[bench]]
name = "ordset"
harness = false

[[bench]]
name = "hashmap"
harness = false

[[bench]]
name = "hashset"
harness = false

[[bench]]
name = "vector"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "trie"
harness = false

